# aimotion-fleet1tenth

./: .gitignore  README.MD  setup_workspace.sh
aimotion-f1tenth-system/: README.md
aimotion-f1tenth-system/src/: README.MD
aimotion-f1tenth-system/src/control/: CMakeLists.txt  package.xml
aimotion-f1tenth-system/src/control/config/: config.yaml
aimotion-f1tenth-system/src/drive_bridge/drive_bridge_msg/: CMakeLists.txt  package.xml
aimotion-f1tenth-system/src/service_definitions/: CMakeLists.txt  package.xml
aimotion-f1tenth-system/src/vehicle_state_msgs/: CMakeLists.txt
aimotion-f1tenth-system/src/vehicle_state_observer/: CMakeLists.txt  package.xml
fleet1tenth/: README.md  setup_workspace.sh
fleet1tenth/scripts/: agile_demo_paths.pkl  city_demo_car.py  demo_agile.py  demo_agile_tdk.py  demo_roundabout.py  keyboard_remote.py  miert.py  only_sim.py  path_1_circle.pkl  path_1_circle_old.pkl  path_2_circle.pkl  path_3_circle.pkl  random_circle_gen.py  simtest.py  simtest_reverse.py  test_agile_paths.pkl  vehicle_install_stack.py
fleet1tenth/scripts/config/: simulation.yaml
fleet1tenth/scripts/fleet1tenthpy/: __init__.py  examplepathgen.py  fleet.py  fleet1tenth.py  gui.py  install_utils.py  logging.py  parser.py
fleet1tenth/src/keyboard_operator/: CMakeLists.txt  package.xml
fleet1tenth/src/simulator/: CMakeLists.txt  package.xml
fleet1tenth/src/start/: CMakeLists.txt  package.xml
fleet1tenth/src/vehicle_state_logger/: CMakeLists.txt  package.xml
fleet1tenth/src/vehicle_state_msgs/: package.xml
fleet1tenth/src/vesc_msgs/: CMakeLists.txt
(+54 files in other folders)
