<?xml version="1.0"?>
<package format="2">
  <name>drive_bridge_msg</name>
  <version>1.0.0</version>
  <description>Message definitions for the drive bridge of the F1/10 platform</description>

  <maintainer email="kristof.floch@gmail.com">K. Floch</maintainer>
  <author email="kristof.floch@gmail.com">K. Floch</author>
  <license>MIT</license>

  <url type="repository">https://github.com/AIMotionLab-SZTAKI/aimotion-f1tenth</url>
  
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>message_runtime</build_depend>
  <build_depend>std_msgs</build_depend>

  <build_export_depend>std_msgs</build_export_depend>

  <exec_depend>message_runtime</exec_depend>
  <exec_depend>message_generation</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
